# new

./: .env.example  .gitignore  .pre-commit-config.yaml  Instructions  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/data/: alpaca_stream.py  pubsub.py
backend/app/execution/: router.py
backend/app/risk/: manager.py
backend/app/strategy/: ai_helper.py  base.py  options.py  scalping.py  swing.py
backend/app/tasks/: __init__.py
backend/app/tests/: test_health.py  test_risk.py  test_risk_manager.py
backend/model_server/: main.py
docs/: deployment.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: main.tsx
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml
