[tool.poetry]
name = "alpaca-ai-bot"
version = "0.1.0"
description = "AI-enhanced trading bot using Alpaca"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = "^1.10"
alpaca-py = "^0.7.0"
websockets = "^10.4"
pandas = "^1.5"
numpy = "^1.24"
ta = "^0.10"
scikit-learn = "^1.3"
xgboost = "^1.7"
openai = "^0.27"
celery = "^5.2"
redis = "^4.5"
sqlalchemy = "1.4.*"
python-json-logger = "^2.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.27"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.20"
pytest-cov = "^4.0"
httpx = "^0.25"
black = "^23.7"
isort = "^5.12"
flake8 = "^6.0"
mypy = "^1.3"
playwright = "^1.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
